--- a/chapterAPPX_ModelEval.tex
+++ b/chapterAPPX_ModelEval.tex
@@ -5,7 +5,7 @@
 \cleardoublepage
 \chapter[2019 Model Evaluation]{Model Evaluation}
 \label{ch:appx_modeleval}
-%DS small chanhges 2/9
+%DS small changes 2/9
 
 %The purpose of this appendix is to make readers of this report better
 %aware of our web resources (evaluation report/supplementary material)
@@ -426,12 +426,8 @@ Na+ in \PM[10] (\ug)
 
 %\vspace{0.2cm}
 
-
 \end{center}
 \end{table}
-
-
-
 
 
 
@@ -441,4 +437,3 @@ Na+ in \PM[10] (\ug)
 %\renewcommand\bibname{References}      % bibliographystyle command!
 %\addcontentsline{toc}{section}{References}
 %\bibliography{Refs,EMEP_Reports}
-
