--- a/chapterAPPX_SR_2019.tex
+++ b/chapterAPPX_SR_2019.tex
@@ -4,6 +4,7 @@
 \cleardoublepage
 \chapter[SR tables for 2019]{Source-receptor tables for 2019}
 \label{ch:appx_sr2019}
+%DS small check 2/9
 
 
 % MichaelG prøver å få oversikt:
@@ -27,15 +28,13 @@
 % The table captions can have up to 3 lines in order to fit on one page.
 
 The source-receptor tables in this appendix are calculated for the
-meteorological and chemical conditions of 2019, using the EMEP MSC-W model version rv4.42. The tables are calculated for the EMEP domain covering the geographic area between 30\degrees N-82\degrees N latitude and 30\degrees 
-W-90\degrees E longitude, and are based on model runs driven by ECMWF-IFS(cy46r1) meteorology in $\resZT$ longitude-latitude projection.\\
+meteorological and chemical conditions of 2019, using the EMEP MSC-W model version rv4.42. The tables are calculated for the EMEP domain covering the geographic area between 30\degrees N--82\degrees N latitude and 30\degrees 
+W--90\degrees E longitude, and are based on model runs driven by ECMWF-IFS(cy46r1) meteorology in $\resZT$ longitude-latitude projection.\\
 
 The source-receptor (SR) relationships give the change in air concentrations or depositions resulting from a
 change in emissions from each emitter country.\\ 
 
-%Some additional emphasis this year has been put on the emission of condensable organics, and most of
 The tables in this appendix are based on model calculations using the EMEPwREF2.1C dataset as described in Chapter ~\ref{ch:emis2019} and summarized in Appendix~\ref{ch:appx_emis_2019}.\\
-%However, for tables related to primary particulate matter, additional tables are provided that are based on the \textit{EMEP} emission dataset as provided by CEIP. Details about these emission datasets are given in Chapters~\ref{ch:emis2019} and~\ref{ch:Condensables}, but for a quick overview, the national emission data for 2019 can be found in Appendix~\ref{ch:appx_emis_2019}, together with the expert estimates for 2019 for PPM. The expert estimates including condensable organics in GNFR sector C (EMEPwREF2.1C) are described in Chapter~\ref{chap:TNO}. The setup of the model for the source receptor model runs are described in Chapter~\ref{ch:Condensables}.\\
 
 For each country, reductions in five different pollutants have been
 calculated separately, with an emission reduction of 15\% for \sox,
@@ -144,7 +143,7 @@ VOC emissions have been summed up. Units: ng/m$^3$
 \end{itemize}
 \vspace{20pt}
   
-%% Source-receptor calculations with the 15\% perturbation method used the EMEPwREF2.1C emission data set. Additional source-receptor calculations for PM, using the official EMEP emissions for PPM, were done only with the new \textit{Local Fraction} method. For details about this method see Section~\ref{sec:LFrac}. Since the \textit{Local Fraction} method tracks all emissions, results have been scaled by a factor of 0.15 to give comparable results for concentrations and indicator tables.
+%% Source-receptor calculations with the 15\% perturbation method used the EMEPwREF2.1C emission data set. Additional source-receptor calculations for PM, using the official EMEP emissions for PPM, were done only with the new \textit{Local Fraction} method. For details about this method see Ch~\ref{sec:LFrac}. Since the \textit{Local Fraction} method tracks all emissions, results have been scaled by a factor of 0.15 to give comparable results for concentrations and indicator tables.
 %% Unless stated otherwise in the captions of the tables, the results are given for the model calculations using EMEPwREF2.1C emissions.
 
 %% %FOR EC
