--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -18,7 +18,7 @@ the rv4.35 version reported in \citet{R2020:ModDev}.
 Table~\ref{tab:Updates} summarises
 the changes made in the EMEP model since the version documented in
 \citet{Simpson:EMEP2012}, and these changes are discussed in
-more detail in Sects.~\ref{sec:updateOverview}-\ref{sec:updateOther}.
+more detail in Ch~\ref{sec:updateOverview}-\ref{sec:updateOther}.
 
 %Versions:
 %
