--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -103,7 +103,7 @@ reports which are  issued as a supplement to the EMEP status reports.
 %of acidifying and eutrophying components
 %\citep{WEB2020:SN}, ozone \citep{WEB2020:O3} and particulate matter \citep{WEB2020:PM}. These plots are provided for %all stations reporting to
 %EMEP (with just a few exclusions due to data-capture or technical problems).
-Model evaluation against all EMEP observations are visualized online at XXXXX web address
+Model evaluation against all EMEP observations is visualized online at \url{https://aeroval.met.no/evaluation.php?project=emep&exp_name=2021-reporting}
 This online information is complemented by numerical fields and other
 information on the EMEP website. The reader is encouraged to visit the
 website, \url{http://www.emep.int}, to access this additional information.
