--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -94,7 +94,7 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
  emissions \citep{CAMSemis2019}, developed by the Finnish
  Meteorological Institute (FMI). The forest fires emissions are taken from
  The Fire INventory from NCAR (FINN) \citep{Wiedinmyer2011}, version 5.
- For more details on the emissions for the 2019 model runs see Ch~ \ref{ch:emis2019} and Appendix \ref{ch:appx_emis_2019}.
+ For more details on the emissions for the 2019 model runs see Ch~\ref{ch:emis2019} and Appendix \ref{ch:appx_emis_2019}.
 
 
  %Trend runs with the EMEP MSC-W model have been performed for the
@@ -146,7 +146,7 @@ June 2019 was the warmest June on record, globally as well as for Europe \citep{
 One month later, during 24-26 July a new and even more intense (albeit shorter) heat wave struck central and northwestern part of Europe, and national temperature records were set in the UK and Germany (38.7 \degrees C in the UK and 40.5 \degrees C in Germany). Along with this heat wave, peak ozone levels were measured. In the UK, an hourly maximum level of 119 ppb (238 \ug) was observed at Sibton 25 July, the highest level measured at this site since 1996. At Vredepeel in the Netherlands, the ozone levels peaked at 127 ppb (254 \ug) on the same day and thereby broke EU's alert threshold. The extent of the ozone episode on 25 July is seen on Figure~\ref{fig:O3_20190725}, showing the modelled and observed values. 
 
 
-For the year 2019 as a whole, Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure ~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
+For the year 2019 as a whole, Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
 
 These plots indicate good agreement between these modelled and measured ozone metrics in general. The model and the measurements show an increasing gradient to the southeast as expected which reflects the strong dependency between surface ozone, temperature and solar radiation. 
 
@@ -213,10 +213,10 @@ There is a good agreement between the modelled and observed
 distributions of annual mean \PM[10] and \PM[2.5], with correlation
 coefficients of 0.60 and 0.72, respectively. Overall, the model
 underestimates the observed annual mean of \PM[10] by 12\% and
-\PM[2.5] by 13\% (see also Table \ref{tab:tableOldFashioned} in \ref{ch:appx_modeleval}). \textcolor{blue}{CHECK with and Refer to AeroVal....}
+\PM[2.5] by 13\% (see also Table \ref{tab:tableOldFashioned} in Appendix \ref{ch:appx_modeleval}).
 
 
-Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except for the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citet{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
+Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except for the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in~\citet{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
 November being particularly extreme, both in terms of the total rainfall amounts and the number of days with heavy rainfall. As wet scavenging is the main PM removal mechanism, this, combined with the mild winter temperatures, resulted in the lower levels of PM pollution in winter 2019 over most of Europe.   
 
 Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages, based on the 2000-2019 trend runs performed with the EMEP MSC-W model using a consistent emission data-set based on officially submitted data, as documented in Ch \ref{ch:Trends}. In order to look at the sole effect of meteorological conditions on PM pollution, also the 2019 run used here is based on the reported emissions and thus different from the 2019 Status run (in which TNO's emissions for residential combustion are used, as documented in Ch \ref{Mod_2019}). Figure~\ref{fig:PManomin2019} shows that the PM pollution in 2019 was relatively moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-35\% lower compared to the 18-year average in Central Europe and over vast areas in the N/NE of Russia. Only along NW/N coasts in Fennoscandia, parts of Spain and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
@@ -292,9 +292,9 @@ The maps in Figure~\ref{fig:PMexceed} show the number of days with
 exceedances of 50 \ug for \PM[10] and 25 \ug for \PM[2.5] in 2019:
 modelled values as colour contours and observed values as triangles.
 
-Out of the 67 sites with daily or hourly \PM[10] measurements with data
+Overall, the number of days with PM exceedances, observed and modelled for EMEP sites for 2019, was the smallest in the last decade. Out of the 67 sites with daily or hourly \PM[10] measurements with data
 coverage above 75\%, exceedance days were observed at 31 sites. No
-violations of the \PM[10] EU limit value (more than 35 exceedance
+exceedances of the \PM[10] EU limit value (more than 35 exceedance
 days) were observed. Still, 12 sites had more than 3 exceedance days, as rocommended by the WHO AQG. The highest numbers of days
 with observed exceedances of \PM[10] were 7 at DE0001 and 6 at LV0010 and RS0005.
 
