--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -11,11 +11,11 @@
 At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012. In order to assess the progress made towards achieving the environmental and health objectives of the Protocol, a
 list of questions was given to the subsidiary bodies of the Air Convention. Several of these questions were related to the trends of air pollution in Europe. 
 
-In this Chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulfur dioxide, particulate matter (and their species; sulfate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulfur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO Air Quality Guidelines (AQG) values for PM$_{2.5}$ and PM$_{10}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
+In this Chapter, we present an assessment of the trends in air pollution in Europe for the period 2000--2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulfur dioxide, particulate matter (and their species; sulfate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulfur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO Air Quality Guidelines (AQG) values for PM$_{2.5}$ and PM$_{10}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
 
 Comparison of trends in measured and modelled VOCs is not included in this report. The main reasons are the lack of established procedures for doing such a comparison as well as the lack of proper monitoring sites with sufficient data capture and sufficient homogeneity in the monitoring during the 2000-2019 period. The topic of VOC trends will be investigated in more detail in the near future. 
 
-Unfortunately, the EMEP observational network is dominated by sites in the western parts of the EMEP domain and has hardly any coverage in the EECCA (Eastern Europe, Caucasus and Central Asia) countries. Therefore, the assessment discussed in this chapter is only valid for a part of the EMEP domain. As discussed in Ch~\ref{ch:emis2019}, the development of emissions in the western and eastern part of the EMEP domain follows different patterns, with clear decreases of all pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part. Note, however, that the uncertainties related to emissions and their trends in the eastern countries are large (see Ch~\ref{ch:emis2019}). It should also be pointed out that for the different components analyzed, the number of observational sites available and the geographical coverage differ. Thus the trends for the different components are not fully consistent. 
+Unfortunately, the EMEP observational network is dominated by sites in the western parts of the EMEP domain and has hardly any coverage in the EECCA (Eastern Europe, Caucasus and Central Asia) countries. Therefore, the assessment discussed in this chapter is only valid for a part of the EMEP domain. As discussed in Ch~\ref{ch:emis2019}, the development of emissions in the western and eastern part of the EMEP domain follows different patterns, with clear decreases of all pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000--2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part. Note, however, that the uncertainties related to emissions and their trends in the eastern countries are large (see Ch~\ref{ch:emis2019}). It should also be pointed out that for the different components analyzed, the number of observational sites available and the geographical coverage differ. Thus the trends for the different components are not fully consistent. 
 %HF while looking at the results for different components, one should take into consideration the different number and geographical coverage of sites included (and sometimes the period studied).
 
 
@@ -43,12 +43,9 @@ used.
 
 Volcanic \sox emissions from passive degassing of Italian volcanoes (Etna,
 Stromboli and Vulcano) are those reported by
-Italy. \sox and PM emissions from volcanic eruptions of Icelandic volcanoes in the period 2000-2019 (Eyjafjallaj\"okull in 2010, Gr{\'{\i}}msv{\"{o}}tn in 2011 and  Bar\dh{}arbunga in 2014-2015) are reported by Iceland. 
+Italy. \sox and PM emissions from volcanic eruptions of Icelandic volcanoes in the period 2000--2019 (Eyjafjallaj\"okull in 2010, Gr{\'{\i}}msv{\"{o}}tn in 2011 and  Bar\dh{}arbunga in 2014--2015) are reported by Iceland. 
  
 The speciation of PM emissions into emissions of elemental carbon (EC), primary organic aerosol (POA), and `remPPM' (remaining PPM) components was based on ECLIPSE v6b emission data \footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}}. These ECLIPSE emissions are given in 5-year intervals (2000, 2005, etc.); intermediate years were derived by linear interpolation. However, all years after 2015 used the 2016 speciation of PM emissions. The VOC speciation was based upon data from various CAMS datasets as described in \cite{R2020:ModDev}. NOx speciations (into NO, \ce{NO2} and `shipNOx') were as used in previous reports.
-\SKIP{
-and NOx speciation into NO, \ce{NO2} and `shipNOx' was based upon Older IIASA? Who did this - what is source?
-} % END SKIP
 For NOx and VOC the same (sector-based) speciations were used for all years.
 Soil NO$_x$ emissions were based on the new CAMS-GLOB-SOIL v2.2 NO$_x$ inventory \citet{SimpsonDarras:2021}. Soil-NO$_x$ emissions which are related to the use of fertilizer were not taken from the CAMS-GLOB-SOIL inventory, as these are already included in the EMEP (CEIP) emissions.
 A revised set of anthropogenic emissions for all the years 2000--2019 has been used in the model calculations (including all the reported and re-reported data by June 2021), see Ch~\ref{ch:emis2019}.
@@ -108,7 +105,7 @@ EMEP reported data for the European region, then the emissions of both POA and E
 
 \section{\label{OBSTrends}{Observations}}
 
-The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}). The time series have been selected based on statistical criteria as described in section  \ref{Method}. Sites which are situated higher than 1200 m.a.s.l. have been excluded (except Schauinsland  at 1205 m.a.s.l.) in addition to NO0042G at 474 m.a.s.l (which is situated close to the boundaries of the model domain). These sites are often measuring above the boundary layer, which is not well represented by a model with a resolution of \resZO. For EC and OC, only observations using the reference method EUSAAR-2 \citep{Cavalli:EUSAAR} have been selected and, due to the lack of a long consistent time series, statistics are only done for the last decade for these compounds. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
+The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}). The time series have been selected based on statistical criteria as described in Section ~\ref{sec:Method}. Sites which are situated higher than 1200 m.a.s.l. have been excluded (except Schauinsland  at 1205 m.a.s.l.) in addition to NO0042G at 474 m.a.s.l (which is situated close to the boundaries of the model domain). These sites are often measuring above the boundary layer, which is not well represented by a model with a resolution of \resZO. For EC and OC, only observations using the reference method EUSAAR-2 \citep{Cavalli:EUSAAR} have been selected and, due to the lack of a long consistent time series, statistics are only done for the last decade for these compounds. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
 
 \section{\label{sec:Method}{Method for calculation of trends}}
 
@@ -143,12 +140,12 @@ The trends and their uncertainties for all the individual sites are available fr
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
-Emissions of SO$_x$ have declined by more than 80\% (-4.3\% yr$^{-1}$) within part of the EMEP domain (EU27+UK+EFTA countries) over the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show substantial decreases (Figure~\ref{fig:SOx_trends} and 
+Emissions of SO$_x$ have declined by more than 80\% (-4.3~\%/yr) within part of the EMEP domain (EU27+UK+EFTA countries) over the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show substantial decreases (Figure~\ref{fig:SOx_trends} and 
 Tables~\ref{tab:so2_stat}--\ref{tab:so4dep_stat}), in line with several studies on trends published lately \citep{aas2019global,TFMM2016, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}. A majority of the time series show significant trends for the 20 year period for all the compounds (Tables~\ref{tab:so2_stat}--\ref{tab:so4dep_stat}).
 
 The spatial distribution of the relative trends (Figure~\ref{fig:Strends_map}) shows that the decreases in sulfur air concentrations and wet deposition have been quite homogeneous across Europe west of Russia, though somewhat higher in Spain and France and lower in Poland. There have been higher reductions in the primary component \soii compared to  secondary \soiv. The greater decrease in \soii compared to secondary sulfate is likely due to a combine effect of higher oxidation rate (hence more \soii converted to \soiv) and increased dry deposition rate of \soii. One possible explanation is that the oxidation capacity of the atmosphere may have increased as the emissions have decreased \citep{Dalsoren2016}. This would give less acidic clouds due to less \soii and only slight decreases in \nhiii, which has increased the oxidation rate of \soii to \soiv via the ozone pathway \citep{Banzhaf2015, Redington2009}. In addition, less acidity in the environment probably leads to more efficient dry deposition of \soii \citep{Fowler_et_al:2009}. 
 
-The average observed trends for the last 20 years (2000--2019) are -3.9, -3.2 and -3.1\% yr$^{-1}$ for \soii, \soiv in aerosols and \soiv in wet deposition, respectively, while the trends in model calculations are somewhat greater: -5.1, -3.8 and -4.3\% yr$^{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the absolute trend is higher in observations, but within the 95\% confidence interval of the modelled trends.  
+The average observed trends for the last 20 years (2000--2019) are -3.9, -3.2 and -3.1~\%/yr for \soii, \soiv in aerosols and \soiv in wet deposition, respectively, while the trends in model calculations are somewhat greater: -5.1, -3.8 and -4.3~\%/yr, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the absolute trend is higher in observations, but within the 95\% confidence interval of the modelled trends.  
 
 It is not clear why the trends calculated by the model are larger than the trends in observations. However, it is worth noting that also the trends in reported emissions are larger than the trends in the different sulfur components in observations. The mismatch between the calculated trends and the observed trends are particularly large for Eastern Spain and parts of Eastern Europe. These differences between the modelled trends, the trends in emissions and the trends in observations might potentially indicate that the emission reductions reported by the countries are somewhat optimistic for some countries. However, firm conclusions are difficult to draw as we do not monitor the full sulfur budget (e.g. dry deposition of sulfur is lacking). Furthermore, changes in emissions distribution that are not correctly accounted for or missing processes in the model could also play a role.
 
@@ -156,7 +153,7 @@ The relative difference between the two decades are small. The reductions in SO$
 
 The relative trends across the different seasons are similar. However, there are larger absolute changes in \soii for both observations and model calculations during the winter (Fig.~\ref{fig:SOx_trends}).
 
-For the period of 2005--2019 (starting with the reference year of the Gothenburg protocol), the reported emission reductions in the EU27+UK+EFTA countries are 75\%, which is reflected in the modelled results with reductions of 74\% in \soii, 56\% in \soiv in aerosols and 63\% in wet deposition of \soiv. The observations show smaller reductions than the emissions (and the model), with 60\% in \soii, 49\% in \soiv in aerosol and 40\% for wet deposition of \soiv.
+For the period of 2005--2019 (starting with the reference year of the Gothenburg Protocol), the reported emission reductions in the EU27+UK+EFTA countries are 75\%, which is reflected in the modelled results with reductions of 74\% in \soii, 56\% in \soiv in aerosols and 63\% in wet deposition of \soiv. The observations show smaller reductions than the emissions (and the model), with 60\% in \soii, 49\% in \soiv in aerosol and 40\% for wet deposition of \soiv.
 
 
 
@@ -263,17 +260,18 @@ During the last decades, the total emissions of NO$_x$ have declined significant
 
 Figure~\ref{fig:NOx_trends} shows an overview of the annual and seasonal trends in oxidised nitrogen compounds from 2000 to 2019. Tables~\ref{tab:no2_stat} to \ref{tab:no3dep_stat} show absolute and relative changes in the different oxidized nitrogen compounds.
 
-From 2000--2019, the reductions have been on average -1.2\%~yr$^{-1}$ for \ce{NO2} concentrations at EMEP background sites (total -24\%). As NO$_2$ has a short lifetime, the trend in NO$_2$ is expected to reflect the trend in (local) emissions of NOx. During the 2000--2019 period, NO$_x$ emissions within the western EMEP domain (EU27+UK+EFTA countries), where the dominant part of the long term EMEP observations are situated, decreased by -48\%. EMEP MSC-W model calculations follow the reported emission reductions closely (average reductions of -2.2\%~yr$^{-1}$, or in total -42\%). 
+From 2000--2019, the reductions have been on average -1.2~\%/yr for \ce{NO2} concentrations at EMEP background sites (total -24\%). As NO$_2$ has a short lifetime, the trend in NO$_2$ is expected to reflect the trend in (local) emissions of NOx. During the 2000--2019 period, NO$_x$ emissions within the western EMEP domain (EU27+UK+EFTA countries), where the dominant part of the long term EMEP observations are situated, decreased by -48\%. EMEP MSC-W model calculations follow the reported emission reductions closely (average reductions of -2.2~\%/yr, or in total -42\%). 
 The trends calculated from observations and from the model (and emissions) agree well for the last period (2010--2019), with trends around -2.6\% yr$^{-1}$, whilst the trend in the first period is substantially lower in the observations than in the model calculations (and emissions). From Figure~\ref{fig:NOx_trends} it can be seen that the agreement between observations and model calculations is excellent until around 2008, but that in the year 2009 and onwards the model (and emissions) is shifted down relative to the observations. Similar results have been found in \citep{Colette2021}.
 
-The trends in wet deposition of oxidized nitrogen reflect changes in long range transported oxidized nitrogen (e.g. NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and are less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NO$_x$) for the 2000--2019 period. Whilst the average trend in observations is -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.3 \% yr$^{-1}$ (total of -45\%), close to the trends in emissions from the western EMEP domain (-48\%). %The difference between the trend in observations are largest during the first period, similar to the results for NO$_2$.
+
+The trends in wet deposition of oxidized nitrogen reflect changes in long range transported oxidized nitrogen (e.g. NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and are less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NO$_x$) for the 2000--2019 period. Whilst the average trend in observations is -1.4~\%/yr (total of -26\%), the model calculates the trend at the same sites to be -2.3~\%/yr (total of -45\%), close to the trends in emissions from the western EMEP domain (-48\%). %The difference between the trend in observations are largest during the first period, similar to the results for NO$_2$.
 However, the model overestimates nitrate wet deposition somewhat until around 2010, and is then shifted downward and in good agreement with observations for the years after. Note that the number of sites with significant trends for the shorter periods is small, and thus the results encumbered with more uncertainty.
 
 
 For particulate nitrate, nitric acid and their sum, the results are more complex. The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered, and the gas/aerosol partitioning to nitrate and nitric acid is methodologically biased\citep{EMEP2014}.
 %quality of the measurements is worse. 
 
-The modelled trends for 2000 to 2019 are all around -2 to -2.5\% per year for particulate nitrate, nitric acid and their sum - aligned with the results of NO$_2$, wet deposition of oxidized nitrogen and the emissions. The observations show a somewhat smaller negative trend of around -1.6\% yr$^{-1}$ for the sum and around -2\% yr$^{-1}$ both for particulate nitrate and nitric acid. For the shorter periods, the number of sites with significant trends are very small, both in the model calculations and the observations, and thus the results more uncertain.
+The modelled trends for 2000 to 2019 are all around -2 to -2.5~\%/yr for particulate nitrate, nitric acid and their sum - aligned with the results of NO$_2$, wet deposition of oxidized nitrogen and the emissions. The observations show a somewhat smaller negative trend of around -1.6~\%/yr for the sum and around -2~\%/yr both for particulate nitrate and nitric acid. For the shorter periods, the number of sites with significant trends are very small, both in the model calculations and the observations, and thus the results more uncertain.
 However, for all the three observations, the trend in the first period (2000--2010) is smaller than the trend in the second period, whilst the model shows a rather similar trend for the sum, and larger trends in the first period for the separate components.
 
 
@@ -387,7 +385,9 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \end{table}
 
 \begin{table}[h]
-\caption{\label{tab:hno3_stat} As Tab.~\ref{tab:so2_stat}, but for concentrations of {\ensuremath{\mbox{HNO}_{\rm 3}}}.
+\caption{\label{tab:hno3_stat} As Tab.~\ref{tab:so2_stat}, but for concentrations of
+\ce{HNO3}.
+%{\ensuremath{\mbox{HNO}_{\rm 3}}}.
 %Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated concentrations of {\ensuremath{\mbox{HNO}_{\rm 3}}}. The number of sites with a significant outcome is provided.
 }
 \begin{center}
@@ -422,7 +422,7 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \scalebox{0.68}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ugN $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ugN $m^{2}$ yr$^{-1}$)} & \multicolumn{4}{c}{Relative change (\% yr$^{-1}$)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval &  
 mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
        &         &       & obs. & mod. &      &              &  
@@ -454,16 +454,16 @@ Note that previous studies  \citep[e.g.][]{torseth2012,Theobald2019} have found 
 Figure~\ref{fig:Nred_trends} shows an overview of the annual and seasonal trends in reduced nitrogen compounds from 2000 to 2019. Figure~\ref{fig:RDNtrends} visualizes the trends in different reduced nitrogen compounds from observations on top of modelled trends on a European map. Tables~\ref{tab:tnh4_stat} to \ref{tab:nh4dep_stat} show absolute and relative changes in the different reduced nitrogen compounds.
 
 
-Indeed, both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen. Out of 44 sites with long term measurements at EMEP background sites, only 13 are significant for the observations and 9 for the model. The average change in the observations for 2000 to 2019 is -0.31\% yr$^{-1}$, with a confidence interval from -0.99\% yr$^{-1}$ to +0.37\% yr$^{-1}$, while the model shows an average trend of -0.4\% yr$^{-1}$ and a confidence interval of -0.7\% yr$^{-1}$ to -0.1\% yr$^{-1}$. For the shorter time periods (2000--2010 and 2010--2019) there are even fewer sites with significant trends (see Table~\ref{tab:nh4dep_stat}).
+Indeed, both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen. Out of 44 sites with long term measurements at EMEP background sites, only 13 are significant for the observations and 9 for the model. The average change in the observations for 2000 to 2019 is -0.31~\%/yr, with a confidence interval from -0.99~\%/yr to +0.37~\%/yr, while the model shows an average trend of -0.4~\%/yr and a confidence interval of -0.7~\%/yr to -0.1~\%/yr. For the shorter time periods (2000--2010 and 2010--2019) there are even fewer sites with significant trends (see Table~\ref{tab:nh4dep_stat}).
 
-Total ammonium (NH$_3$ + NH$_4$) in air shows larger negative changes in observations of about -1.45\% yr$^{-1}$, and for the model -1.36\% yr$^{-1}$, and with a larger fraction of the sites having significant trends. This trend is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% in observations and 26\% in model calculations for 2000--2019.
+Total ammonium (NH$_3$ + NH$_4$) in air shows larger negative changes in observations of about -1.45~\%/yr, and for the model -1.36~\%/yr, and with a larger fraction of the sites having significant trends. This trend is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% in observations and 26\% in model calculations for 2000--2019.
 
-The trend for ammonium aerosols is even more negative, -2.61 \% yr$^{-1}$, both in observations and model calculations.
+The trend for ammonium aerosols is even more negative, -2.61~\%/yr, both in observations and model calculations.
 
-Very few sites have long term time series of ammonia in air (8 sites), and very few of the trends calculated are significant. However, on average, the changes observed and calculated are positive: +1.55 and +1.54 \% yr$^{-1}$ in observations and model calculations, respectively, with all values within the confidence interval being positive.
+Very few sites have long term time series of ammonia in air (8 sites), and very few of the trends calculated are significant. However, on average, the changes observed and calculated are positive: +1.55 and +1.54~\%/yr in observations and model calculations, respectively, with all values within the confidence interval being positive.
 
 
-This large difference between the trends of the different reduced nitrogen components can be explained by the interaction of ammonia with the sulfur and nitrogen components. When ammonia is released into the air, it reacts with secondary sulfate originating from the SO$_x$ emissions and forms particulate ammonium sulfate. If more ammonia is available, it reacts with nitric acid in an equilibrium reaction to form particulate ammonium nitrate. During the years from 2000 onwards, large reductions in SO$_x$ and NO$_x$ emissions have taken place, and thus less sulfate and nitric acid is available for forming ammonium particles. Therefore, a smaller fraction of NH$_3$ is converted to aerosol ammonium, and the decrease in particulate ammonium is strongly linked to the decrease in sulfate and nitrate. It is therefore to be expected that the trend in ammonium aerosol (-2.6\% yr$^{-1}$, observations) lies somewhere between the trend in particulate sulfate (-3.2\% yr$^{-1}$, observations) and nitrate (-2.0\% yr$^{-1}$, observations). 
+This large difference between the trends of the different reduced nitrogen components can be explained by the interaction of ammonia with the sulfur and nitrogen components. When ammonia is released into the air, it reacts with secondary sulfate originating from the SO$_x$ emissions and forms particulate ammonium sulfate. If more ammonia is available, it reacts with nitric acid in an equilibrium reaction to form particulate ammonium nitrate. During the years from 2000 onwards, large reductions in SO$_x$ and NO$_x$ emissions have taken place, and thus less sulfate and nitric acid is available for forming ammonium particles. Therefore, a smaller fraction of NH$_3$ is converted to aerosol ammonium, and the decrease in particulate ammonium is strongly linked to the decrease in sulfate and nitrate. It is therefore to be expected that the trend in ammonium aerosol (-2.6~\%/yr, observations) lies somewhere between the trend in particulate sulfate (-3.2~\%/yr, observations) and nitrate (-2.0~\%/yr, observations). 
 
 When less ammonia is converted to ammonium, the (very small) decrease in ammonia emissions is compensated by a larger part of ammonia residing in the gas phase, and no decreases in ammonia (very few significant trends) are detected.
 
@@ -506,7 +506,7 @@ In summary, the observations and the model calculations confirm that very small 
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug yr$^{-1})$} & \multicolumn{4}{c}{Relative change (\% yr$^{-1}$)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval &  
 mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
        &         &       & obs. & mod. &     &                 &  
@@ -533,7 +533,7 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug yr$^{-1})$} & \multicolumn{4}{c}{Relative change (\% yr$^{-1}$)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval & 
 mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
        &         &       & obs. & mod. &       &               & 
@@ -560,7 +560,7 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \scalebox{0.67}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug yr$^{-1})$} & \multicolumn{4}{c}{Relative change (\% yr$^{-1}$)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval &  
 mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
        &         &       & obs. & mod. &      &                &  
@@ -1177,7 +1177,7 @@ mod. & conf.interval & obs. & conf.interval &  mod. & conf.interval \\
 
 In the trend analysis in the period 2000-2019, 37 and 19 sites with satisfactory data coverage have been included for \PM[10] and \PM[2.5], respectively. The annual series of \PM[10] and \PM[2.5] (Figure \ref{fig:pm_trends}, left panels) show clear concentration decreases from 2000 to 2019, both from observations and model simulations. In general, the model underestimates the concentrations, but reproduces quite well observed year-to-year changes in \PM[10] and \PM[2.5], including enhanced PM levels due to meteorological conditions e.g. in 2003 (dry hot summer, \citealt{EMEP:PM2005}) and 2011 (dry year in Western/Central/Southern Europe, \citealt{EMEP:PM2013}). It should be noted that the emission data used for the model runs does not include condensable organics consistently across countries (see Ch~\ref{ss:IssuesECOC}). Thus, part of the underestimation of PM can be related to the lack of condensable organics in the emissions. 
 
-Statistically significant \PM[10] and \PM[2.5] trends have been identified for the majority of the sites. For \PM[10], the observed and simulated with the model relative reductions are on average 1.83 ~\%/yr and 1.95 ~\%/yr respectively, whilst reductions are on average 2.42~\%/yr and 2.52~\%/yr for \PM[2.5]. The smaller reductions in \PM[10] compared to \PM[2.5] can be explained by the larger natural contribution of sea salt and dust in the coarse fraction. 
+Statistically significant \PM[10] and \PM[2.5] trends have been identified for the majority of the sites. For \PM[10], the observed and simulated with the model relative reductions are on average 1.8 ~\%/yr and 1.9 ~\%/yr respectively, whilst reductions are on average 2.4~\%/yr and 2.5~\%/yr for \PM[2.5]. The smaller reductions in \PM[10] compared to \PM[2.5] can be explained by the larger natural contribution of sea salt and dust in the coarse fraction. 
 %HF
 %For the period of 2000-2019, the average observed \PM[10] trends are -0.36 \ug/yr, or -1.83~\%/yr in relative terms. The corresponding \PM[10] trends from model simulations are -0.27 \ug/yr and -1.92~\%/yr. For \PM[2.5], the average absolute trends are -0.29 and -0.25 \ug/yr and the relative ones are -2.42 and -2.51~\%/yr, observed and modelled respectively. The reduction of anthropogenic emissions during this period is a major cause for the decreasing average concentrations of PM, with \PM[10] trends experiencing larger disturbances due to considerable contribution from natural aerosols of sea salt and mineral dust in the coarse fraction. Considerable changes in PM pollution caused by the inter-annual meteorological variability also interfere with the PM trends due to emission changes, as the weather conditions affect both the formation of secondary aerosols, emissions of natural particles, and dry and wet depositions.
 
@@ -1207,7 +1207,7 @@ Summarizing trend results for the 2000--2019 period, the average \PM[10] and \PM
 During this 20-year period, \PM[10] concentrations decreased on average 35\% in observations (37\% in model simulations) at the considered sites. On average, \PM[2.5] decreased by 46\% in observations (48\% in model calculations). We find good correspondence between observed and model simulated trends in PM concentrations. 
 
 %Furthermore, 
-Figure \ref{fig:pmExc_trends} presents the changes in the number of sites at which the annual mean \PM[10] and \PM[2.5] exceeded WHO AQG recommended levels (20 and 10 \ug respectively) for the period 2001 to 2019. Both results from observations and model calculations are shown. Same as for PM trend analysis, only the sites with observations satisfying a criteria of 75\% data coverage for each year have been included. The additional requirement here was that the observations at each site should be available for all analysed years (while for the PM trend analysis, the 75\% coverage requirement was applied, resulting in a minimum of 14 years for the 2000-2019 period, see Ch~\ref{sec:Method}. For the analysis of the number of sites with PM exceedances, it is essential that the number of sites included are the same for all the years. Therefore it was decided to exclude the year 2000, in which much fewer sites satisfied the data time coverage criteria, and look at the period 2001--2019. 
+Figure \ref{fig:pmExc_trends} presents the changes in the number of sites at which the annual mean \PM[10] and \PM[2.5] exceeded WHO AQG recommended levels (20 and 10 \ug respectively) for the period 2001 to 2019. Both results from observations and model calculations are shown. Same as for PM trend analysis, only the sites with observations satisfying a criteria of 75\% data coverage for each year have been included. The additional requirement here was that the observations at each site should be available for all analysed years (while for the PM trend analysis, the 75\% coverage requirement was applied, resulting in a minimum of 14 years for the 2000-2019 period, see Ch~\ref{sec:Method}). For the analysis of the number of sites with PM exceedances, it is essential that the number of sites included are the same for all the years. As much fewer sites satisfied the data time coverage criteria for 2000, we excluded this year and analyzed the period 2001--2019. 
 
 % V1 Only sites with observations for all the years from 2001 has been considered, using a criteria of 75\% coverage in time per year (the year 2000 has been excluded due to few sites that passed the 75\% time coverage criteria). 
 
