--- a/chapterAPPX_EMIS_trends.tex
+++ b/chapterAPPX_EMIS_trends.tex
@@ -17,11 +17,11 @@ For primary PM in 2019, two different sets of emissions have been used: 1) EMEP 
 for 2019, and 2) EMEP PM emissions where condensable organics from small-scale combustion are accounted for by using expert emission estimates for GNFR sector C from the
 TNO REF2.1 data set for the following countries: Albania, Austria, Bosnia and Herzegovina,
 Belarus, Switzerland, Cyprus, Germany, Estonia, France, Ireland, Lithuania, Montenegro,
-Poland, Russian Federation, Slovakia, Turkey and Ukraine. In this report 1) is referred to as EMEP and 2) is referred to as EMEPwREF2.1C.\\
+Poland, Russian Federation, Slovakia, Turkey and Ukraine. In this report 1) is referred to as EMEP and 2) is referred to as EMEPwREF2.1C. Please note that the trend calculations which are discussed in Ch~\ref{ch:Trends} are based only on 1) EMEP emissions, while 2) EMEPwREF2.1C emissions are used in the status run (Ch~\ref{ch:chapterStatus} and in source-receptor calculations (Appendix~\ref{ch:appx_sr2019}).\\
 
 Emissions from international shipping occurring in different European seas within the EMEP domain are not reported to UNECE CLRTAP, but derived from other sources. This year, emissions for the sea regions are based on the CAMS global shipping emission dataset \citep{CAMSemis2019,ECCAD} for the years 2000 to 2019, developed by the Finish Meteorological Institute using AIS (Automatic Identification System) tracking data.\\
 
-Natural marine emissions of dimethyl sulphid (DMS) are calculated dynamically during the model run and vary with current meteorological conditions.\\
+Natural marine emissions of dimethyl sulfide (DMS) are calculated dynamically during the model run and vary with current meteorological conditions.\\
 
 \sox emissions from passive degassing of Italian volcanoes (Etna,
 Stromboli and Vulcano) are those reported by
