--- a/chapterAPPX_trends.tex
+++ b/chapterAPPX_trends.tex
@@ -1,16 +1,17 @@
 % do this here for safety!!!
 \setcounter{page}{1}
+%DS small changes 2/9: -- instead of - in ranges
 
 %Leave this here in order to start the whole on an odd-numbered page
 \cleardoublepage
-\chapter[Trends 2000-2019]{Sites used for the trends calculations}
+\chapter[Trends 2000--2019]{Sites used for the trends calculations}
 \label{ch:appx_trends}
-This appendix contains information of which EMEP sites have been used in the trend analysis for the the different components and time periods presented in chapter \ref{ch:Trends}.
+This appendix contains information of which EMEP sites have been used in the trend analysis for the the different components and time periods presented in chapter \ref{ch:Trends}. 
 
 \clearpage
 
 \begin{table}
-\caption{\label{tab:sites_trend} The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
+\caption{\label{tab:sites_trend} The sites used in the trend calculations for the different components and periods, x: 2000--2019, a: 2005--2019, b: 2000--2010, c: 2010--2019}
 \centering{
 \scalebox{0.65}{%
 
@@ -89,7 +90,7 @@ FI0017(18)R &  x &   x &    x &      x &   x &    x &    c &    c &      x &    
 
 \begin{table}
 \renewcommand\thetable{}
-\caption{C:1 Cont. The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
+\caption{C:1 Cont. The sites used in the trend calculations for the different components and periods, x: 2000--2019, a: 2005--2019, b: 2000--2010, c: 2010--2019}
 \centering{
 \scalebox{0.65}{%
 
@@ -173,7 +174,7 @@ NO0001(2)R &  x &   x &    x &      - &   x &    x &    x &    x &      - &    x
 \clearpage
 \begin{table}[H]
 \renewcommand\thetable{}
-\caption{C:1 Cont. The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
+\caption{C:1 Cont. The sites used in the trend calculations for the different components and periods, x: 2000--2019, a: 2005--2019, b: 2000--2010, c: 2010--2019}
 \centering{
 \scalebox{0.65}{%
 
